# fontgen

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
example/: fontgen.ini
src/: main.cpp
